for the run without parameters

--- a/src/main/resources/META-INF/native-image/cn.gzten/kay/resource-config.json
+++ b/src/main/resources/META-INF/native-image/cn.gzten/kay/resource-config.json
@@ -1,7 +1,5 @@
 {
   "resources":{
-  "includes":[{
-      "pattern":"\\Qorg/springframework/http/codec/CodecConfigurer.properties\\E"
-    }]},
+  "includes":[]},
   "bundles":[]
 }
