--- a/src/main/resources/META-INF/native-image/cn.gzten/kay/resource-config.json
+++ b/src/main/resources/META-INF/native-image/cn.gzten/kay/resource-config.json
@@ -1,5 +1,7 @@
 {
   "resources":{
-  "includes":[]},
+  "includes":[{
+      "pattern":"\\Qorg/springframework/http/codec/CodecConfigurer.properties\\E"
+    }]},
   "bundles":[]
 }
