--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                         <arg>--add-exports</arg>
-                        <arg>java.base/sun.net.dns=ALL-UNNAMED</arg>
+                        <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
                 <version>3.10.1</version>
