Support the http method input and verification. TODO: implement the methods

--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <argLine>--add-opens java.base/sun.net.dns=ALL-UNNAMED</argLine>
+                    <argLine>--enable-preview --add-opens java.base/sun.net.dns=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
